vlib/v/checker/tests/inout/mod_op_wrong_left_type_err_b.out
vlib/v/checker/tests/inout/mod_op_wrong_left_type_err_b.v:2:2: error: left type of `%` cannot be non-integer type array_int
    1| fn main() {
    2|     [1,2,3] % 1
           ~~~~~~~
    3| }
